--- a/public/index.html
+++ b/public/index.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<title>Frozen Bubble Game</title>
-		<!-- stylesheets -->
-		<link rel="stylesheet" href="css/styles.css" type="text/css">
-
-		<!-- javascript - The next lines should be minified -->
-		<script src="js/config.js"></script>
-		<script src="js/tools/animated_image.js"></script>
-		<script src="js/tools/text.js"></script>
-		<script src="js/tools/sound_manager.js"></script>
-		<script src="js/tools/user_alerts.js"></script>
-		<script src="js/level_temp/levels.js"></script>
-		<script src="js/controllers/bubble.js"></script>
-		<script src="js/controllers/game.js"></script>
-		<script src="js/controllers/compressor.js"></script>
-		<script src="js/controllers/bubbles_grid.js"></script>
-		<script src="js/controllers/player.js"></script>
-		<script src="js/frozen_bubble.js"></script>
-	</head>
-	<body>
-		<div id="main_canvas"></div>
-	</body>
+<!--[if lt IE 7]> <html class="lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
+<!--[if IE 7]> <html class="lt-ie9 lt-ie8" lang="en"> <![endif]-->
+<!--[if IE 8]> <html class="lt-ie9" lang="en"> <![endif]-->
+<!--[if gt IE 8]><!--> <html lang="en"> <!--<![endif]-->
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <title>Frozen Bubble Game</title>
+  <link rel="stylesheet" href="css/welcome_scr.css">
+  <script src="js/jquery.min.js"></script>
+  <script src="js/app_welcome.js"></script>
+  <!--[if lt IE 9]><script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+</head>
+<body>
+  <h1 class="register-title">Welcome</h1>
+  <form class="register">
+    <!-- <div class="register-switch">
+      <input type="radio" name="sex" value="F" id="sex_f" class="register-switch-input" checked>
+      <label for="sex_f" class="register-switch-label">Female</label>
+      <input type="radio" name="sex" value="M" id="sex_m" class="register-switch-input">
+      <label for="sex_m" class="register-switch-label">Male</label>
+    </div> -->
+    <input type="text" class="register-input" placeholder="Name" id="txt_name">
+    <input type="text" class="register-input" placeholder="Words (eg. dog, cat, etc...)" id="txt_words">
+    <input type="button" value="Begin" class="register-button" id="btn_begin">
+  </form>
+</body>
 </html>
