fixed color added 1 more color label

--- a/public/game.html
+++ b/public/game.html
@@ -27,7 +27,8 @@
         <div id="below" style="display: block; position: fixed; top: 10px; right: 37%;">
             <div id="welcomeTextWrapper"></div>
             <h1 class="title-red">Current Word</h1>
-            <label id="txt_word"></label>
+            <h1 id="txt_word"></h1>
+            <h3 id="txt_word_color"></h3>
             <h2 class="title-purple">Remaining Words</h2>
             <div id="wordListWrapper"></div>
         </div>
